switched to only one create entity method